@@ -20,4 +20,4 @@
 #   You should have received a copy of the GNU General Public License
 #   along with this program. If not, see <http://www.gnu.org/licenses/>
 ################################################################################
-__version__ = '0.8.0rc3'
+__version__ = '0.8.0rc4'
